Strip img names in popups

--- a/Playing-with-places.ipynb
+++ b/Playing-with-places.ipynb
@@ -157,7 +157,7 @@
     "    # Create the content of the marker popup -- includes a search link back to Trove!\n",
     "    #html = '<b>{}</b><br><a target=\"_blank\" href=\"https://trove.nla.gov.au/newspaper/result?q={}&l-title={}&l-category={}\">{} articles'.format(place[0], params['q'], titles, params.get('l-category', ''), total)\n",
     "    # Add the marker to the map\n",
-    "    html = '<b>{0}</b><br><a target=\"_blank\" href=\"http://digital.sl.nsw.gov.au/delivery/DeliveryManagerServlet?dps_pid={1}&embedded=true&toolbar=false\"><img width=\"200\" src=\"https://s3-ap-southeast-2.amazonaws.com/wraggetribune/images/500/{1}-500.jpg\"></a>'.format(img['Place Name'].replace(\"'\", ';rsquo'), img['File Number'])\n",
+    "    html = '<b>{0}</b><br><a target=\"_blank\" href=\"http://digital.sl.nsw.gov.au/delivery/DeliveryManagerServlet?dps_pid={1}&embedded=true&toolbar=false\"><img width=\"200\" src=\"https://s3-ap-southeast-2.amazonaws.com/wraggetribune/images/500/{1}-500.jpg\"></a>'.format(img['Place Name'].replace(\"'\", ';rsquo'), img['File Number'].strip())\n",
     "    folium.Marker([img['Latitude'], img['Longitude']], popup=html).add_to(marker_cluster)\n",
     "\n",
     "m"
